# integral-rs

./: Cargo.toml  Dockerfile
migrations/: 2024-05-15-create-tables.sql  2024-06-25-add-locations.sql
src/: extractors.rs  features.rs  main.rs
src/db/: assignments.rs  jobs.rs  mod.rs  resources.rs  strings.rs  users.rs
src/routes/v0/: features.rs  jobs.rs  login.rs  mod.rs  resources.rs  stream.rs
