[package]
name = "integral"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
async-stream = "0.3.5"
axum = { version = "0.7.5", features = ["multipart", "tokio", "macros"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
lazy_static = "1.4.0"
mime = "0.3.17"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
snowflake = { git = "https://github.com/galenguyer/snowflake" }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.37.0", features = ["full", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ureq = { version = "2.9.7", features = ["json"] }
